--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "latex2sympy"]
-	path = latex2sympy
+	path = backend/latex2sympy/latex2sympy
 	url = https://github.com/TheVirtualMachine/latex2sympy.git
