--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/MCV4U0-ISP.wiki"]
 	path = docs/MCV4U0-ISP.wiki
 	url = https://github.com/TheVirtualMachine/MCV4U0-ISP.wiki.git
+[submodule "backend/latex2sympy"]
+	path = backend/latex2sympy
+	url = https://github.com/TheVirtualMachine/latex2sympy.git
