--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,10 @@
 {
   "name": "frontend",
+  "homepage": "https://thevirtualmachine.github.io/MCV4U0-ISP/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "mathquill": "^0.10.1-a",
     "react": "^16.2.0",
     "react-color": "^2.13.8",
@@ -12,6 +14,8 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
