--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "hoek": "^5.0.3",
+    "jquery": "^3.3.1",
     "mathquill": "^0.10.1",
     "react": "^16.3.2",
     "react-color": "^2.14.1",
